--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,10 @@
     <color name="black">#000000</color>
     <color name="grey">#BABABA</color>
     <color name="white">#ffffff</color>
+    <color name="lightGrey">#f8f8f8</color>
     <color name="green">#39ff14</color>
     <color name="red">#ff0000</color>
     <color name="yellow">#ffff00</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorTransparentWhite">#cccccc</color>
 </resources>
