--- a/app/src/main/res/layout/activity_enter_name.xml
+++ b/app/src/main/res/layout/activity_enter_name.xml
@@ -27,14 +27,13 @@
         android:layout_height="wrap_content"
         android:text="@string/welcome2"
         android:textAlignment="center"
-        android:textColor="@color/green"
+        android:textColor="@color/white"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/ck_logo"
-        app:layout_constraintHorizontal_bias="0.54"
-        app:layout_constraintStart_toStartOf="@+id/ck_logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.351" />
+        app:layout_constraintVertical_bias="0.353" />
 
     <EditText
         android:id="@+id/teamMember1"
@@ -47,8 +46,8 @@
         android:ems="10"
         android:hint="@string/teamMemberName1"
         android:inputType="textPersonName"
-        android:textColor="@color/yellow"
-        android:textColorHint="@color/green"
+        android:textColor="@color/green"
+        android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,8 +65,8 @@
         android:ems="10"
         android:hint="@string/teamMemberName2"
         android:inputType="textPersonName"
-        android:textColor="@color/yellow"
-        android:textColorHint="@color/green"
+        android:textColor="@color/green"
+        android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,8 +84,7 @@
         android:background="@color/black"
         android:fontFamily="@font/press_start_2p"
         android:text="Enter"
-
-        android:textColor="@color/green"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.892"
