--- a/app/src/main/res/layout/dev_card.xml
+++ b/app/src/main/res/layout/dev_card.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    app:cardCornerRadius="15dp"
+    android:backgroundTint="@color/black"
     android:padding="30dp"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
@@ -15,14 +15,15 @@
     tools:context=".DevMainActivity">
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="351dp"
-        android:layout_height="356dp">
+        android:layout_width="350dp"
+        android:layout_height="300dp">
 
         <ImageView
             android:id="@+id/devImage"
             android:layout_width="180dp"
             android:layout_height="250dp"
             android:layout_marginLeft="20dp"
+            android:background="@drawable/dev_cards"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -38,6 +39,7 @@
             android:text="Name"
             android:textSize="20sp"
             android:textAlignment="center"
+            android:textColor="@color/green"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.835"
@@ -50,6 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="nana"
+            android:textColor="@color/green"
             android:textSize="18sp"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
