--- a/app/src/main/res/layout/instruction_slide_layout.xml
+++ b/app/src/main/res/layout/instruction_slide_layout.xml
@@ -14,7 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.184"
-        app:srcCompat="@drawable/paanda" />
+        app:srcCompat="@drawable/screenshot_1" />
 
     <TextView
         android:id="@+id/slide_descs"
@@ -23,7 +23,6 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:background="@android:color/transparent"
-        android:fontFamily="casual"
         android:textAlignment="center"
         android:lineSpacingExtra="8sp"
         android:text="@string/slide1"
