--- a/app/src/main/res/layout/question_card_view.xml
+++ b/app/src/main/res/layout/question_card_view.xml
@@ -27,7 +27,7 @@
             android:layout_marginBottom="70dp"
             android:padding="8dp"
             android:scrollbars="vertical"
-            android:text="@string/card1"
+            android:text="@string/path1_question1"
             android:textSize="21sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
