--- a/app/src/main/res/layout/recycler_view.xml
+++ b/app/src/main/res/layout/recycler_view.xml
@@ -8,6 +8,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
+        android:id="@+id/timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Timer"
@@ -48,9 +49,11 @@
         app:layout_constraintVertical_bias="0.983" />
 
     <ImageView
+        android:id="@+id/life1"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/ic_favorite_black_24dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.078"
@@ -59,8 +62,10 @@
         app:layout_constraintVertical_bias="0.97" />
 
     <ImageView
+        android:id="@+id/life2"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:visibility="invisible"
         android:src="@drawable/ic_favorite_black_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,23 +75,14 @@
         app:layout_constraintVertical_bias="0.97" />
 
     <ImageView
+        android:id="@+id/life3"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:visibility="invisible"
         android:src="@drawable/ic_favorite_black_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.322"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.97" />
-
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:src="@drawable/ic_favorite_black_24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.444"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.97" />
